--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Abishek's Portfolio</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; text-align: center; padding: 50px; }
-    h1 { color: #333; }
-    p { color: #666; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hi, I'm Abishek 👋</h1>
-  <p>I’m a student learning web development.</p>
-  <p>This is my very first website!</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h1>Hello, I'm Abishek!</h1>
+        <p>This is where you tell the visitors about yourself, your skills, and experience.</p>
+    </section>
+
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project">
+            <h3>Project Title</h3>
+            <p>Describe your project here and the technologies you used.</p>
+        </div>
+        <!-- Add more projects as you go -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: your.email@example.com</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Abishek. All rights reserved.</p>
+    </footer>
 </body>
 </html>
