--- a/index.html
+++ b/index.html
@@ -10,30 +10,25 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="about">
-        <h1>Hello, I'm Abishek!</h1>
-        <p>This is where you tell the visitors about yourself, your skills, and experience.</p>
-    </section>
-
-    <section id="projects">
-        <h2>My Projects</h2>
-        <div class="project">
-            <h3>Project Title</h3>
-            <p>Describe your project here and the technologies you used.</p>
-        </div>
-        <!-- Add more projects as you go -->
-    </section>
-
+                <li><a href="#about"><section id="about">
+    <h1>Hello, I'm Abishek!</h1>
+    <p>I'm a first-semester BSc CSIT student, passionate about coding and technology. I love building projects that solve real-world problems, and I’m always looking for new challenges to grow my skills.</p>
+</section>
+</a></li>
+                <li><a href="#projects"><section id="projects">
+    <h2>My Projects</h2>
+    <div class="project">
+        <h3>Calculator in C</h3>
+        <p>A simple calculator built using C programming, capable of performing basic operations like addition, subtraction, multiplication, and division.</p>
+        <a href="https://github.com/yourusername/calculator" target="_blank">View on GitHub</a>
+    </div>
+  
+</section>
+</a></li>
+             
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: your.email@example.com</p>
+        <p>Email: abishekc441@gmail.com</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></p>
     </section>
 
