--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Abishek Kumar Chaudhary- Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
     <div class="project">
         <h3>Calculator in C</h3>
         <p>A simple calculator built using C programming, capable of performing basic operations like addition, subtraction, multiplication, and division.</p>
-        <a href="https://github.com/yourusername/calculator" target="_blank">View on GitHub</a>
+        <a href="https://github.com/abishekchaudhary9/Calculator.git" target="_blank">View on GitHub</a>
     </div>
   
 </section>
@@ -29,7 +29,7 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <p>Email: abishekc441@gmail.com</p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/abishek-chaudhary-3a69a7337 " target="_blank">Your LinkedIn</a></p>
     </section>
 
     <footer>
